--- a/.argo/kubefirst-staging.yaml
+++ b/.argo/kubefirst-staging.yaml
@@ -10,7 +10,7 @@ spec:
       steps:
         - - name: checkout
             templateRef:
-              name: cwft-git
+              name: cwft-git-v2
               template: checkout-with-gitops-for-charts
               clusterScope: true
             arguments:
@@ -21,9 +21,10 @@ spec:
                   value: '{{workflow.parameters.branch}}'
                 - name: gitUrlNoProtocol
                   value: '{{workflow.parameters.gitUrlNoProtocol}}'
+
         - - name: get-macro-chart-version
             templateRef:
-              name: cwft-helm
+              name: cwft-helm-v2
               template: get-macro-chart-version-from-gitops-repo
               clusterScope: true
             arguments:
@@ -32,10 +33,11 @@ spec:
                   from: '{{steps.checkout.outputs.artifacts.repo-source}}'
               parameters:
                 - name: gitopsSourceFile
-                  value: 'registry/{{workflow.parameters.clusterName}}/components/development/kubefirst.yaml' #hardcoded env
+                  value: '{{workflow.parameters.gitopsSourceFile}}'
+
         - - name: set-environment-version-for-macro-chart
             templateRef:
-              name: cwft-helm
+              name: cwft-helm-v2
               template: set-environment-version-for-macro-chart
               clusterScope: true
             arguments:
@@ -44,15 +46,16 @@ spec:
                   from: '{{steps.checkout.outputs.artifacts.repo-source}}'
               parameters:
                 - name: fullChartPath
-                  value: 'registry/{{workflow.parameters.clusterName}}/components/{{workflow.parameters.environment}}/kubefirst.yaml'
+                  value: '{{workflow.parameters.gitopsDestinationFile}}'
                 - name: chartVersion
                   value: '{{steps.get-macro-chart-version.outputs.result}}'
                 - name: environment
                   value: '{{workflow.parameters.environment}}'
+
         - - name: commit
             templateRef:
-              name: cwft-git
-              template: pull-commit-push
+              name: cwft-git-v2
+              template: pull-commit-sign-push
               clusterScope: true
             arguments:
               artifacts:
