--- a/.github/workflows/metaphor-staging.yaml
+++ b/.github/workflows/metaphor-staging.yaml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Inject slug/short variables
         uses: rlespinasse/github-slug-action@v4
-      - name: staging
+      - name: promote staging
         run: |
           echo "tag version: ${GITHUB_REF_NAME}"
           echo "Install argo"
