--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -1,13 +1,13 @@
 apiVersion: v2
 dependencies:
 - name: console
-  repository: https://charts.kubefirst.com
+  repository: https://charts.konstruct.io
   version: 2.55.0
 - name: kubefirst-api
   repository: https://charts.konstruct.io
   version: 0.102.0-rc.565788f
 - name: kubefirst-api-ee
-  repository: https://charts.kubefirst.com
+  repository: https://charts.konstruct.io
   version: 0.12.0
 description: kubefirst helm chart
 name: kubefirst
