--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -2,13 +2,13 @@ apiVersion: v2
 dependencies:
 - name: console
   repository: https://charts.konstruct.io
-  version: 2.55.0
+  version: 2.56.0-rc.b7382ac
 - name: kubefirst-api
   repository: https://charts.konstruct.io
   version: 0.102.0-rc.565788f
 - name: kubefirst-api-ee
   repository: https://charts.konstruct.io
-  version: 0.12.0
+  version: 1.0.0-rc.36790ec
 description: kubefirst helm chart
 name: kubefirst
 type: application
