--- a/charts/kubefirst/values.yaml
+++ b/charts/kubefirst/values.yaml
@@ -1,9 +1,6 @@
 console:
   domain: kubefirst.dev
 global:
-  consoleVersion: v2.5.1-rc0
-  kubefirst-api-eeVersion: v2.5.1-rc0
-  kubefirst-apiVersion: v2.5.1-rc0
-  kubefirstVersion: v2.5.1
+  kubefirstVersion: v2.5.2-rc0
 kubefirst-api-ee:
   existingSecret: kubefirst-initial-secrets
