--- a/.github/workflows/kubefirst-publish-rc-chart.yaml
+++ b/.github/workflows/kubefirst-publish-rc-chart.yaml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
       - name: inject slug/short variables
         uses: rlespinasse/github-slug-action@v4
-      - name: publish image and chart
+      - name: publish kubefirst chart
         run: |
           echo "Install argo"
           # Download the binary
