--- a/.github/workflows/kubefirst-release.yaml
+++ b/.github/workflows/kubefirst-release.yaml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
       - name: inject slug/short variables
         uses: rlespinasse/github-slug-action@v4
-      - name: release
+      - name: release kubefirst
         run: |
           echo "Install argo"
           # Download the binary
