--- a/.github/workflows/kubefirst-staging.yaml
+++ b/.github/workflows/kubefirst-staging.yaml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
       - name: inject slug/short variables
         uses: rlespinasse/github-slug-action@v4
-      - name: promote staging
+      - name: promote kubefirst staging
         run: |
           echo "Install argo"
           # Download the binary
