--- a/.argo/kubefirst-pro-publish-rc-chart.yaml
+++ b/.argo/kubefirst-pro-publish-rc-chart.yaml
@@ -37,10 +37,10 @@ spec:
                 - name: tag
                   value: '{{workflow.parameters.tag}}'
 
-        - - name: pull-sign-commit-push-gitops
+        - - name: pull-sign-commit-push-gitops-template
             templateRef:
               name: cwft-git-v2
-              template: pull-sign-commit-push-gitops-kubefirst
+              template: pull-sign-commit-push-gitops-template
               clusterScope: true
             arguments:
               artifacts:
@@ -48,29 +48,8 @@ spec:
                   from: '{{steps.checkout.outputs.artifacts.repo-source}}'
               parameters:
                 - name: appName
-                  value: 'kubefirst'
-                - name: chartVersion
-                  value: '{{steps.get-version.outputs.result}}'
+                  value: 'gitops-template'
                 - name: commitMessage
                   value: 'set next macro chart for kubefirst - {{steps.get-version.outputs.result}}'
-                - name: environment
-                  value: 'development'
-
-        - - name: pull-sign-commit-push-kubefirst
-            templateRef:
-              name: cwft-git-v2
-              template: pull-sign-commit-push-kubefirst
-              clusterScope: true
-            arguments:
-              artifacts:
-                - name: repo-source
-                  from: '{{steps.checkout.outputs.artifacts.repo-source}}'
-              parameters:
-                - name: appName
-                  value: 'kubefirst'
-                - name: commitMessage
-                  value: 'set next macro chart for kubefirst - {{steps.get-version.outputs.result}}'
-                - name: chartVersion
+                - name: nextChartVersion
                   value: '{{steps.get-version.outputs.result}}'
-                - name: environment
-                  value: "development"
