--- a/.argo/kubefirst-release.yaml
+++ b/.argo/kubefirst-release.yaml
@@ -46,6 +46,8 @@ spec:
                 - name: rcVersion
                   value: '{{steps.get-macro-chart-version.outputs.result}}'
 
+
+        # set the macro chart version to the release version for Kubefirst OSS
         - - name: set-macro-chart-version
             templateRef:
               name: cwft-helm-v2
@@ -78,6 +80,39 @@ spec:
                 - name: chartVersion
                   value: '{{steps.get-release-version-from-rc.outputs.result}}'
 
+        # set the macro chart version to the release version for Kubefirst Pro
+        - - name: set-macro-chart-version
+            templateRef:
+              name: cwft-helm-v2
+              template: set-macro-chart-version
+              clusterScope: true
+            arguments:
+              artifacts:
+                - name: repo-source
+                  from: '{{steps.checkout.outputs.artifacts.repo-source}}'
+              parameters:
+                - name: chartDir
+                  value: 'charts/kubefirst-pro'
+                - name: chartVersion
+                  value: '{{steps.get-release-version-from-rc.outputs.result}}'
+
+        - - name: set-kubefirst-version-in-values-yaml
+            templateRef:
+              name: cwft-helm-v2
+              template: set-kubefirst-version-in-values-yaml
+              clusterScope: true
+            arguments:
+              artifacts:
+                - name: repo-source
+                  from: '{{steps.set-macro-chart-version.outputs.artifacts.repo-source}}'
+              parameters:
+                - name: appName
+                  value: '{{workflow.parameters.appName}}'
+                - name: chartDir
+                  value: 'charts/kubefirst-pro'
+                - name: chartVersion
+                  value: '{{steps.get-release-version-from-rc.outputs.result}}'
+
         - - name: commit-release-chart-increment
             templateRef:
               name: cwft-git-v2
@@ -101,6 +136,7 @@ spec:
                   # in case, the rule is disbaled or don't work this step will create a circular trigger of builds and bumps of version.
                   value: "[skip ci] [CI SKIP] setting kubefirst chart to release version {{steps.get-release-version-from-rc.outputs.result}}\n\nskip-checks:true"
 
+        # Publish helm chart for Kubefirst OSS
         - - name: publish-helm-chart
             templateRef:
               name: cwft-helm-v2
@@ -115,6 +151,22 @@ spec:
                   value: 'charts'
                 - name: chartDir
                   value: 'charts/kubefirst'
+
+        # Publish helm chart for Kubefirst Pro
+        - - name: publish-helm-chart
+            templateRef:
+              name: cwft-helm-v2
+              template: publish-chart
+              clusterScope: true
+            arguments:
+              artifacts:
+                - name: repo-source
+                  from: '{{steps.commit-release-chart-increment.outputs.artifacts.repo-source}}'
+              parameters:
+                - name: appName
+                  value: 'charts'
+                - name: chartDir
+                  value: 'charts/kubefirst-pro'
 
         - - name: release-and-tag-main-with-notes
             templateRef:
