--- a/.argo/kubefirst-release.yaml
+++ b/.argo/kubefirst-release.yaml
@@ -47,7 +47,7 @@ spec:
                   value: '{{steps.get-macro-chart-version.outputs.result}}'
 
 
-        # set the macro chart version to the release version for Kubefirst OSS
+        # Kubefirst OSS
         - - name: set-macro-chart-version
             templateRef:
               name: cwft-helm-v2
@@ -77,39 +77,6 @@ spec:
                   value: '{{workflow.parameters.appName}}'
                 - name: chartDir
                   value: 'charts/kubefirst'
-                - name: chartVersion
-                  value: '{{steps.get-release-version-from-rc.outputs.result}}'
-
-        # set the macro chart version to the release version for Kubefirst Pro
-        - - name: set-macro-chart-version
-            templateRef:
-              name: cwft-helm-v2
-              template: set-macro-chart-version
-              clusterScope: true
-            arguments:
-              artifacts:
-                - name: repo-source
-                  from: '{{steps.checkout.outputs.artifacts.repo-source}}'
-              parameters:
-                - name: chartDir
-                  value: 'charts/kubefirst-pro'
-                - name: chartVersion
-                  value: '{{steps.get-release-version-from-rc.outputs.result}}'
-
-        - - name: set-kubefirst-version-in-values-yaml
-            templateRef:
-              name: cwft-helm-v2
-              template: set-kubefirst-version-in-values-yaml
-              clusterScope: true
-            arguments:
-              artifacts:
-                - name: repo-source
-                  from: '{{steps.set-macro-chart-version.outputs.artifacts.repo-source}}'
-              parameters:
-                - name: appName
-                  value: '{{workflow.parameters.appName}}'
-                - name: chartDir
-                  value: 'charts/kubefirst-pro'
                 - name: chartVersion
                   value: '{{steps.get-release-version-from-rc.outputs.result}}'
 
@@ -136,7 +103,6 @@ spec:
                   # in case, the rule is disbaled or don't work this step will create a circular trigger of builds and bumps of version.
                   value: "[skip ci] [CI SKIP] setting kubefirst chart to release version {{steps.get-release-version-from-rc.outputs.result}}\n\nskip-checks:true"
 
-        # Publish helm chart for Kubefirst OSS
         - - name: publish-helm-chart
             templateRef:
               name: cwft-helm-v2
@@ -152,8 +118,63 @@ spec:
                 - name: chartDir
                   value: 'charts/kubefirst'
 
-        # Publish helm chart for Kubefirst Pro
-        - - name: publish-helm-chart
+        # Kubefirst Pro
+        - - name: set-macro-chart-version-kubefirst-pro
+            templateRef:
+              name: cwft-helm-v2
+              template: set-macro-chart-version
+              clusterScope: true
+            arguments:
+              artifacts:
+                - name: repo-source
+                  from: '{{steps.checkout.outputs.artifacts.repo-source}}'
+              parameters:
+                - name: chartDir
+                  value: 'charts/kubefirst-pro'
+                - name: chartVersion
+                  value: '{{steps.get-release-version-from-rc.outputs.result}}'
+
+        - - name: set-kubefirst-version-in-values-yaml-kubefirst-pro
+            templateRef:
+              name: cwft-helm-v2
+              template: set-kubefirst-version-in-values-yaml
+              clusterScope: true
+            arguments:
+              artifacts:
+                - name: repo-source
+                  from: '{{steps.set-macro-chart-version-kubefirst-pro.outputs.artifacts.repo-source}}'
+              parameters:
+                - name: appName
+                  value: '{{workflow.parameters.appName}}'
+                - name: chartDir
+                  value: 'charts/kubefirst-pro'
+                - name: chartVersion
+                  value: '{{steps.get-release-version-from-rc.outputs.result}}'
+
+        - - name: commit-release-chart-increment-kubefirst-pro
+            templateRef:
+              name: cwft-git-v2
+              template: pull-commit-sign-push
+              clusterScope: true
+            arguments:
+              artifacts:
+                - name: repo-source
+                  from: '{{steps.set-kubefirst-version-in-values-yaml-kubefirst-pro.outputs.artifacts.repo-source}}'
+                  # from: '{{steps.set-macro-chart-version.outputs.artifacts.repo-source}}'
+              parameters:
+                - name: repoName
+                  value: 'charts'
+                - name: gitUrlNoProtocol
+                  value: '{{workflow.parameters.gitUrlNoProtocol}}'
+                - name: commitMessage
+                  # Please, be careful updating this message, it must comply with:
+                  # github skip ci rule: https://github.blog/changelog/2021-02-08-github-actions-skip-pull-request-and-push-workflows-with-skip-ci/
+                  # github skip ci rule: https://docs.github.com/en/actions/managing-workflow-runs/skipping-workflow-runs
+                  # gitlab skip ci rule: https://devops.stackexchange.com/questions/6809/is-there-a-ci-skip-option-in-gitlab-ci
+                  # in case, the rule is disbaled or don't work this step will create a circular trigger of builds and bumps of version.
+                  value: "[skip ci] [CI SKIP] setting kubefirst-pro chart to release version {{steps.get-release-version-from-rc.outputs.result}}\n\nskip-checks:true"
+
+        - - name: publish-helm-chart-kubefirst-pro
             templateRef:
               name: cwft-helm-v2
               template: publish-chart
@@ -161,7 +182,7 @@ spec:
             arguments:
               artifacts:
                 - name: repo-source
-                  from: '{{steps.commit-release-chart-increment.outputs.artifacts.repo-source}}'
+                  from: '{{steps.commit-release-chart-increment-kubefirst-pro.outputs.artifacts.repo-source}}'
               parameters:
                 - name: appName
                   value: 'charts'
