--- a/charts/kubefirst/values.yaml
+++ b/charts/kubefirst/values.yaml
@@ -1,5 +1,3 @@
-console:
-  domain: kubefirst.dev
 global:
   consoleVersion: v2.7.5-rc6
   kubefirst-api-eeVersion: v2.6.1-rc2
@@ -7,3 +5,10 @@ global:
   kubefirstVersion: v2.7.7
 kubefirst-api-ee:
   existingSecret: kubefirst-initial-secrets
+
+kubefirst-api:
+  nameOverride: "api"
+
+console:
+  nameOverride: "console"
+  domain: kubefirst.dev
