--- a/charts/kubefirst-pro/values.yaml
+++ b/charts/kubefirst-pro/values.yaml
@@ -1,6 +1,10 @@
-console:
-  domain: kubefirst.dev
 global:
   kubefirst-pro-apiVersion: v2.7.7-rc4
   kubefirst-pro-uiVersion: v2.7.8-rc1
   kubefirstVersion: v2.7.7
+
+kubefirst-pro-api:
+  nameOverride: "pro-api"
+
+kubefirst-pro-ui:
+  nameOverride: "pro-ui"
