--- a/charts/kubefirst-pro/values.yaml
+++ b/charts/kubefirst-pro/values.yaml
@@ -1,7 +1,7 @@
 global:
   kubefirst-pro-apiVersion: v2.7.8-rc3
   kubefirst-pro-uiVersion: v2.7.8-rc2
-  kubefirstVersion: v2.7.7
+  kubefirstVersion: v2.7.9-rc0
 kubefirst-pro-api:
   nameOverride: pro-api
 kubefirst-pro-ui:
