--- a/charts/kubefirst/values.yaml
+++ b/charts/kubefirst/values.yaml
@@ -5,7 +5,7 @@ global:
   consoleVersion: v2.7.10-rc9
   kubefirst-api-eeVersion: v2.6.1-rc2
   kubefirst-apiVersion: v2.7.10-rc8
-  kubefirstVersion: v2.7.9
+  kubefirstVersion: 2.8.0-rc0
 kubefirst-api:
   nameOverride: api
 kubefirst-api-ee:
