--- a/charts/kubefirst-pro/values.yaml
+++ b/charts/kubefirst-pro/values.yaml
@@ -1,7 +1,7 @@
 global:
-  kubefirst-pro-apiVersion: v2.9.0-rc0
-  kubefirst-pro-uiVersion: v2.9.0-rc8
-  kubefirstVersion: v2.9.0
+  kubefirst-pro-apiVersion: v2.9.1-rc1
+  kubefirst-pro-uiVersion: v2.9.1-rc1
+  kubefirstVersion: v2.9.1-rc1
 kubefirst-pro-api:
   nameOverride: pro-api
 kubefirst-pro-ui:
