--- a/charts/kubefirst/values.yaml
+++ b/charts/kubefirst/values.yaml
@@ -2,10 +2,10 @@ console:
   domain: kubefirst.dev
   nameOverride: console
 global:
-  consoleVersion: v2.9.0-rc4
-  kubefirst-api-eeVersion: v2.9.0-rc2
-  kubefirst-apiVersion: v2.9.0-rc6
-  kubefirstVersion: v2.9.0
+  consoleVersion: v2.9.1-rc1
+  kubefirst-api-eeVersion: v2.9.1-rc1
+  kubefirst-apiVersion: v2.9.1-rc1
+  kubefirstVersion: v2.9.1-rc1
 kubefirst-api:
   nameOverride: api
 kubefirst-api-ee:
