--- a/charts/kubefirst-pro/values.yaml
+++ b/charts/kubefirst-pro/values.yaml
@@ -1,7 +1,7 @@
 global:
-  kubefirst-pro-apiVersion: v2.9.2-rc6
-  kubefirst-pro-uiVersion: v2.9.2-rc9
-  kubefirstVersion: v2.9.1
+  kubefirst-pro-apiVersion: v2.10.0-rc0
+  kubefirst-pro-uiVersion: v2.10.0-rc0
+  kubefirstVersion: v2.10.0-rc0
 kubefirst-pro-api:
   nameOverride: pro-api
 kubefirst-pro-ui:
