--- a/charts/kubefirst/values.yaml
+++ b/charts/kubefirst/values.yaml
@@ -2,10 +2,10 @@ console:
   domain: kubefirst.dev
   nameOverride: console
 global:
-  consoleVersion: v2.9.2-rc2
-  kubefirst-api-eeVersion: v2.9.1-rc1
-  kubefirst-apiVersion: v2.9.2-rc8
-  kubefirstVersion: v2.9.1
+  consoleVersion: v2.10.0-rc0
+  kubefirst-api-eeVersion: v2.10.0-rc0
+  kubefirst-apiVersion: v2.10.0-rc0
+  kubefirstVersion: v2.10.0-rc0
 kubefirst-api:
   nameOverride: api
 kubefirst-api-ee:
